      few others which were missing from the original versions (whose
      font families remain available for reproducibility, although
      Ghostscript-based viewers will render using the 2.0 versions).

      \item Improve the large-n efficiency of \code{as.matrix(<dist>)},
      thanks an R contributors effort, notably by Tim Taylor and
      Heather Turner, see \PR{18660}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item System valgrind headers are required to use
      \command{configure} option \option{--with-valgrind-instrumentation}
      with value \code{1} or \code{2}.

      \item \command{configure} will warn if it encounters a 32-bit
      build, as that is nowadays almost untested.

      \item Environment variable \env{R_SYSTEM_ABI} is no longer used and
      so no longer recorded in \file{etc/Renviron} (it was not on Windows
      and was only ever used when preparing package \pkg{tools}).

      \item If the \code{libdeflate} library and headers are available,
      \code{libdeflate} rather than \code{libz} is used to (de)compress
      \R objects in lazy-load databases,  Typically tasks spend up to 5\% of
      their time on such operations, although creating lazy-data
      databases is one of the exceptions.

      This can be suppressed if the library is available by the
      \command{configure} option
      \option{--without-libdeflate-compression}.

      \item \command{configure} option \option{--enable-lto=check} has
      not worked reliably since 2019 and has been removed.

      \item The minimum \command{autoconf} requirement for a maintainer
      build has been increased to \command{autoconf}\sspace{}2.71, and
      it is intended to increase to 2.72 before release. (The issue is
      better support for \sQuote{C23}: \command{autoconf}\sspace{}2.72
      requires a C version of C90 or later, but \R has long required C99
      or later.)
